--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -27,15 +27,19 @@ header {
     background-color: black;
     color: azure;
     height: 80px;
+    width: 100%;
     margin: 0;
     padding: 0;
+    position: fixed;
 }
+
 
 /* navigation links */
 
 #menu {
     font-size: 100%;
     letter-spacing: 4px;
+    float: right;
 }
 
 #menu, #logo {
@@ -63,3 +67,11 @@ header {
     color: green;
 }
 
+/* index page */
+
+#main-image {
+    width: 100%;
+    height: 700px;
+    overflow: hidden;
+    object-fit: cover;
+}
