--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,37 +10,45 @@ body {
     font-family: Montserrat, sans-serif;
 }
 
-/* header */
-#logo {
-    float: left;
-    font-size: 300%;
-    margin: 5px 0 10px 30px;
-    color: white;
-}
-
 h1, h2, h3 {
     font-family: 'Uncial Antiqua', cursive;
     font-weight: 200;
 }
 
+/******* header **********/
+
 header {
     background-color: black;
-    color: azure;
+    color: white;
     height: 80px;
     width: 100%;
     margin: 0;
-    padding: 0;
+    padding: 0 5%;
     position: fixed;
     z-index: 1;
+}
+
+#logo {
+    float: left;
+    width: 40%;
+    height: 100%;
+    align-items: center;
+    font-size: 300%;
+    /* margin: 5px 0 10px 30px; */
+    color: white;
+    display: flex;
 }
 
 
 /* navigation links */
 
 #menu {
-    font-size: 100%;
-    letter-spacing: 4px;
+    /* letter-spacing: 4px; */
     float: right;
+    width: 60%;
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 #menu, #logo {
@@ -50,36 +58,68 @@ header {
 #menu li {
     float: right;
     list-style-type: none;
-    margin-right: 30px;
-    padding-right: 30px;
+    /* margin-right: 30px;
+    padding-right: 30px; */
 }
 
 #menu a {
     text-decoration: none;
     color: inherit;
+    display: block;
+    padding: 1em;
 }
 
 #menu a:hover {
-    /* border-bottom: 1px solid orange; */
-    color: orange;
+    color: #FFA500;
 }
 
 #menu .active {
-    color: green;
+    color: #32cd32;
+}
+
+#nav-toggle {
+    position: absolute;
+}
+
+nav .burger-menu {
+    display: none;
+    position: absolute;
+    padding: 50% 10% 0 0;
+    transform: translate(-50%);
+}
+
+nav .burger-menu .line {
+    width: 30px;
+    height: 5px;
+    margin: 5px;
+    border-radius: 3px;
+}
+
+@media screen and (max-width: 800px){
+    nav #menu li {
+        float: none;
+        position: fixed;
+        z-index: 9;
+        background-color: rgba(0,0,0,0.5);
+    }
+    nav .burger-menu {
+        display: block;
+    }
 }
 
 /* index page */
 
 .main-banner {
     width: 100%;
-    height: 700px;
-    position:relative;
+    /* height: 500px; */
+    position: relative;
+    margin-top: 80px;
     overflow: hidden;
 }
 
 #main-image {
     width: 100%;
-    height: 700px;
+    height: auto;
     overflow: hidden;
     object-fit: cover;
     background: url(../images/darkhedges.jpg) no-repeat center center;
@@ -92,35 +132,34 @@ header {
     font-style: italic;
     letter-spacing: .5rem;
     position: absolute;
+    text-align: center;
     top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-#about {
-    margin:0;
-    border: 0;
-    padding: 0;
-    background-color: orange;
-    width:100%;
-    height:500px;
-    text-align: center;
+.container {
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+hr {
+    height: 3px;
+    border-radius: 6px;
+    background:linear-gradient(to right, #32cd32, white, #FFA500);
 }
 
 #about-text {
-    background-color: orange;
+    font-size: 1rem;
     width: 50%;
     padding: 30px;
+    padding-left: 100px;
     float: left;
-    text-align: center;
+    text-align: left;
 }
 
 #about-image {
-    height: 428px;
-    width: 311px;
-    overflow: hidden;
-    object-fit:cover;
-    background: url(../images/billythekid.png) no-repeat center center;
-    float: right;
-    margin: 30px;
+    flex-basis: 50%;
 }
