--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,9 @@
     margin: 0;
     padding: 0;
     border: none;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
 }
 
 body {
@@ -12,100 +15,125 @@ body {
 
 h1, h2, h3 {
     font-family: 'Uncial Antiqua', cursive;
-    font-weight: 200;
 }
 
-/******* header **********/
+/******* navbar **********/
 
-header {
-    background-color: black;
-    color: white;
-    height: 80px;
+nav {
+    background-color: #000000;
     width: 100%;
-    margin: 0;
-    padding: 0 5%;
+    height: 80px;
     position: fixed;
-    z-index: 1;
+    z-index: 9;
 }
 
-#logo {
-    float: left;
-    width: 40%;
-    height: 100%;
-    align-items: center;
-    font-size: 300%;
-    /* margin: 5px 0 10px 30px; */
-    color: white;
-    display: flex;
-}
-
-
-/* navigation links */
-
-#menu {
-    /* letter-spacing: 4px; */
-    float: right;
-    width: 60%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-}
-
-#menu, #logo {
-    line-height: 75px;
-}
-
-#menu li {
-    float: right;
-    list-style-type: none;
-    /* margin-right: 30px;
-    padding-right: 30px; */
-}
-
-#menu a {
+.logo {
+    color: #ffffff;
     text-decoration: none;
-    color: inherit;
-    display: block;
-    padding: 1em;
 }
 
-#menu a:hover {
-    color: #FFA500;
+.logo a:visited {
+    color:#ffffff;
 }
 
-#menu .active {
+label .logo {
+    color: #ffffff;
+    font-size: 35px;
+    line-height: 80px;
+    padding: 0 100px;
+    font-weight: bold;
+}
+
+nav ul {
+    float: right;
+    margin-right: 20px;
+}
+
+nav ul li {
+    display: inline-block;
+    line-height: 80px;
+    margin: 0 5px;
+}
+
+nav ul li a {
+    color: #ffffff;
+    font-size: 17px;
+    padding: 7px 13px;
+}
+
+a.active {
     color: #32cd32;
 }
 
-#nav-toggle {
-    position: absolute;
+a:hover {
+    color: #FFA500;
+    transition: .5s;
 }
 
-nav .burger-menu {
+.checkbtn {
+    font-size: 30px;
+    color: #ffffff;
+    float: right;
+    line-height: 80px;
+    margin-right: 40px;
+    cursor: pointer;
     display: none;
-    position: absolute;
-    padding: 50% 10% 0 0;
-    transform: translate(-50%);
 }
 
-nav .burger-menu .line {
-    width: 30px;
-    height: 5px;
-    margin: 5px;
-    border-radius: 3px;
+#check {
+    display: none;
 }
 
-@media screen and (max-width: 800px){
-    nav #menu li {
-        float: none;
-        position: fixed;
-        z-index: 9;
-        background-color: rgba(0,0,0,0.5);
+@media (max-width:952px){
+    label.logo {
+        font-size: 30px;
+        padding-left: 50px;
     }
-    nav .burger-menu {
+
+    nav ul li a {
+        font-size: 16px;
+    }
+}
+
+@media (max-width:858px) {
+    .checkbtn {
         display: block;
     }
+
+    ul {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #3a3a3a;
+        top: 80px;
+        left: 0;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+
+    nav ul li {
+        display: block;
+        margin: 50px 0;
+        line-height: 30px;
+    }
+
+    nav ul li a {
+        font-size: 20px;
+    }
+
+    a:active {
+        color: #32cd32;
+    }
+    a:hover {
+        color: #FFA500;
+    }
+
+    #check:checked ~ ul {
+        left:0;
+    }
 }
+
 
 /* index page */
 
