Add navbar,logo and links

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,3 +16,60 @@ body {
 h1, h2, h3 {
     font-family: 'Uncial Antiqua', cursive;
 }
+
+.container {
+    position: relative
+    margin-top: 100px;
+}
+
+.container img {
+    display: block;
+    width: 100%;
+}
+
+nav {
+    position: fixed;
+    z-index: 10;
+    left: 0;
+    right: 0;
+    top: 0;
+    padding: 0 5%;
+    font-family: 'Montserrat', sans-serif;
+    height: 100px;
+    background-color: #000000;
+}
+
+nav .logo {
+    float: left;
+    width: 40%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    font-size: 24px;
+    color: #ffffff;
+}
+
+nav .links {
+    float: right;
+    padding: 0;
+    margin: 0;
+    width: 60%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+nav .links li {
+    list-style: none;
+}
+
+nav .links a {
+    display: block;
+    padding: 1em;
+    background-color: rgba(0,0,0,.1);
+    font-size: 16px;
+    font-weight: bold;
+    color: #ffffff;
+    text-decoration: none;
+}
