--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -73,3 +73,62 @@ nav .links a {
     color: #ffffff;
     text-decoration: none;
 }
+
+#nav-toggle {
+    position: absolute;
+    top: -100px;
+}
+
+nav .burger-menu {
+    display: none;
+    position: absolute;
+    right: 5%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+nav .burger-menu .line {
+    width: 30px;
+    height: 5px;
+    background-color: #ffffff;
+    margin: 5px;
+    border-radius: 3px;
+    transition: all .3s ease-in-out;
+}
+
+@media screen and (max-width:768px){
+    nav .logo {
+        float: none;
+        width: auto;
+        justify-content: center;
+    }
+    
+    nav .links {
+        float: none;
+        position: fixed;
+        z-index: 9;
+        left: 0;
+        right: 0;
+        top: 100px;
+        bottom: 100%;
+        width: auto;
+        height: auto;
+        flex-direction: column;
+        justify-content: space-evenly;
+        background-color: rgba(0,0,0,.7);
+        overflow: hidden;
+        transition: all .5s ease-in-out;
+    }
+
+    nav .links a {
+        font-size: 20px;
+    }
+
+    nav :checked ~ .links {
+        bottom: 0;
+    }
+    nav .burger-menu {
+        display: block;
+    }
+
+}
