--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -147,13 +147,14 @@ nav .burger-menu .line {
 /***** index *****/
 
 .banner {
-    position: relative
-    margin-top: 100px;
+    width:100%;
+    height:700px;
+
 }
 
 .banner img {
-    display: block;
     width: 100%;
+    height:700px;
     object-fit: cover;
 }
 
@@ -170,12 +171,26 @@ nav .burger-menu .line {
 
 .container-one {
     width: 100%;
-    height: 500px;
-    padding: 70px;
+    padding: 30px 70px 30px 70px;
     background-color: #FFA500;
+    /* display: flex; */
+    align-items: center;
+    justify-content: center;
 }
 
-#about-text h2 {
-    text-align: center;
+#about-text {
     float: left;
 }
+#about-text h2 {
+    text-align: center;
+}
+
+#about-text p {
+   margin: auto;
+   font-size: 20px;
+   color: #000000;
+   /* position: relative;
+   display: inline-block; */
+}
+
+
