--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -149,13 +149,14 @@ nav .burger-menu .line {
 .banner {
     width:100%;
     height:700px;
-
 }
 
 .banner img {
     width: 100%;
     height:700px;
     object-fit: cover;
+    overflow: hidden;
+    position: relative;
 }
 
 .banner-text {
@@ -171,26 +172,24 @@ nav .burger-menu .line {
 
 .container-one {
     width: 100%;
-    padding: 30px 70px 30px 70px;
     background-color: #FFA500;
-    /* display: flex; */
-    align-items: center;
-    justify-content: center;
+}
+
+#about-image {
+    float: left;
+    display: inline-block;
+    overflow-x: hidden;
+}
+
+#about-image img {
+    float: left;
+    width: 100%;
+    height: 100%;
 }
 
 #about-text {
-    float: left;
-}
-#about-text h2 {
-    text-align: center;
+    float: right;
 }
 
-#about-text p {
-   margin: auto;
-   font-size: 20px;
-   color: #000000;
-   /* position: relative;
-   display: inline-block; */
-}
 
 
