--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -170,26 +170,31 @@ nav .burger-menu .line {
     left: 25%;
 }
 
-.container-one {
+.about {
     width: 100%;
     background-color: #FFA500;
-}
-
-#about-image {
-    float: left;
-    display: inline-block;
-    overflow-x: hidden;
-}
-
-#about-image img {
-    float: left;
-    width: 100%;
-    height: 100%;
+    padding: 50px;
+    display: flex;
 }
 
 #about-text {
-    float: right;
+    padding-right: 50px;
+    text-align:justify;
 }
 
+.about img {
+    height: 350px;
+    display: flex;
+    justify-content: space-between;
+}
 
+.diaspora {
+    width: 100%;
+    background-color: #008000;
+    padding: 50px;
+    display: flex;
+}
 
+.diaspora img {
+    width: 100%;
+}
