--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -282,6 +282,39 @@ nav .burger-menu .line {
 
 /***** footer *****/
 footer {
-    height: 75px;
+    height: 100px;
     background: linear-gradient(0deg, rgba(10,79,84,1) 0%, rgba(0,0,0,1) 100%);
+    display:flex
+}
+
+.socials ul{
+    display: flex;
+    position: absolute;
+    bottom: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.socials ul li {
+    list-style: none;
+}
+
+.socials ul li a {
+    color:#ffffff;
+    width: 80px;
+    height: 80px;
+    text-align: center;
+    line-height: 80px;
+    font-size: 30px;
+    margin: 0 10px;
+    display: block;
+    border-radius: 50%;
+    position: relative;
+    overflow: hidden;
+    border: 1px solid white;
+}
+
+ul li a .fa {
+    position: relative;
+    color: #ffffff;
 }
