--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -260,6 +260,11 @@ nav .burger-menu .line {
     /* cursor: pointer; */
 }
 
+.card:hover h2 {
+    color: rgba(255,165,0,.8);
+    transition: all 1.1s ease-in;
+}
+
 .card-image {
     height: 180px;
     margin-bottom: 10px;
@@ -283,38 +288,39 @@ nav .burger-menu .line {
 /***** footer *****/
 footer {
     height: 100px;
+    width: 100%;
     background: linear-gradient(0deg, rgba(10,79,84,1) 0%, rgba(0,0,0,1) 100%);
-    display:flex
 }
 
-.socials ul{
+.socials {
     display: flex;
-    position: absolute;
-    bottom: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    justify-content: center;
+    padding: 30px;
 }
 
-.socials ul li {
+.socials ul {
+    display: flex;
+    justify-content: center;
+}
+.socials li {
     list-style: none;
+    padding: 0 20px 0 20px;
 }
 
-.socials ul li a {
-    color:#ffffff;
-    width: 80px;
-    height: 80px;
-    text-align: center;
-    line-height: 80px;
-    font-size: 30px;
-    margin: 0 10px;
-    display: block;
-    border-radius: 50%;
-    position: relative;
-    overflow: hidden;
-    border: 1px solid white;
-}
-
-ul li a .fa {
-    position: relative;
+.socials a {
+    padding: 10px 16px;
+    font-size: 25px;
     color: #ffffff;
+    border: 1px solid white;
+    border-radius: 50%;
 }
+
+.socials a i {
+    transition: all 0.3s;
+}
+
+.socials a:hover i {
+    transform: scale(1.2);
+    color: #FFA500;
+}
+
