--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -355,3 +355,55 @@ footer {
     bottom:50%;
     left: 5%;
 }
+
+.container-two-events img {
+    width: 100%;
+}
+#container-two-events-text {
+    display: block;
+    padding: 20px 50px 20px 50px;
+}
+
+
+.container-table p {
+    margin-left: 50px;
+}
+
+.container-table table {
+    margin: 30px auto 30px auto;
+}
+
+.table {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    min-width: 400px;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 0 20px rgba(0,0,0,.3);
+}
+
+.table thead tr {
+    /* background-color: rgba(0,128,128,.6); */
+    background: linear-gradient(45deg, black,teal);
+    color: #ffffff;
+    text-align: left;
+    font-weight: bold;
+}
+
+.table th , .table td {
+    padding: 12px 15px;
+}
+
+.table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.table tbody tr:nth-of-type(even){
+    background-color: rgba(0,128,128,.05);
+}
+
+.table tbody tr:last-of-type {
+    border-bottom: 3px solid rgba(0,128,128,.6);
+}
+
