--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -341,7 +341,7 @@ footer {
 
 .banner-events img {
     width: 100%;
-    height:550px;
+    /* height:550px; */
     object-fit: fill;
     overflow: hidden;
     position: relative;
@@ -423,3 +423,19 @@ footer {
     text-align: center;
 }
 
+
+/********** people.html **********/
+
+.banner-people {
+    width:100%;
+    height:550px;
+    margin-top: 100px;
+}
+
+.banner-people img {
+    width: 100%;
+    /* height:550px; */
+    object-fit: fill;
+    overflow: hidden;
+    position: relative;
+}
