--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -154,12 +154,12 @@ nav .burger-menu .line {
 
 .banner {
     width:100%;
-    height:550px;
+    height:80vh;
 }
 
 .banner img {
     width: 100%;
-    height:550px;
+    height:80vh;
     object-fit: cover;
     overflow: hidden;
     position: relative;
@@ -425,26 +425,15 @@ footer {
 
 /********** people.html **********/
 
-/* .banner-people {
+.banner-people {
     width:100%;
-    height:550px;
-    margin-top: 100px;
+    height:80vh;
 }
 
 .banner-people img {
     width: 100%;
-    object-fit: fill;
-    overflow: hidden;
-    position: relative;
-} */
-
-.banner-people {
-    margin-top: 70px;
-    background-image: url('../images/freney2.jpg');
-    background-position: no-repeat center;
-    background-size: cover;
-    height: 500px;
-    width: 100%;
+    height:80vh;
+    object-fit: cover;
     overflow: hidden;
     position: relative;
 }
