--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -154,12 +154,12 @@ nav .burger-menu .line {
 
 .banner {
     width:100%;
-    height:80vh;
+    height:75vh;
 }
 
 .banner img {
     width: 100%;
-    height:80vh;
+    height:75vh;
     object-fit: cover;
     overflow: hidden;
     position: relative;
@@ -178,7 +178,7 @@ nav .burger-menu .line {
 
 .container-one {
     width: 100%;
-    /* background-color: #FFA500; */
+    background-color: #FFA500;
     padding: 50px;
     display: flex;
 }
@@ -196,7 +196,7 @@ nav .burger-menu .line {
 
 .container-two {
     width: 100%;
-    /* background-color: #008000; */
+    background-color: #008000;
     padding: 50px;
     display: flex;
 }
@@ -335,12 +335,13 @@ footer {
 
 .banner-events {
     width:100%;
-    height:550px;
+    height:70vh;
     margin-top: 70px;
 }
 
 .banner-events img {
     width: 100%;
+    height: 70vh;
     object-fit: cover;
     overflow: hidden;
     position: relative;
@@ -425,15 +426,23 @@ footer {
 
 /********** people.html **********/
 
-.banner-people {
-    width:100%;
-    height:80vh;
+/* #mary-text {
+    padding: 50px;
+    text-align:justify;
+    color: #000000;
 }
 
-.banner-people img {
-    width: 100%;
-    height:80vh;
-    object-fit: cover;
-    overflow: hidden;
-    position: relative;
+#mary-image {
+    padding: 20px;
+    display: flex;
+} */
+
+@media screen and (max-width:768px){
+
+    .container-one , .container-two {
+        display: inline-block;
+        justify-content: space-around;
+    }
+
+    
 }
