--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,7 @@
 
 body {
     font-family: Montserrat, sans-serif;
+    display: block;
 }
 
 h1, h2, h3, h4 {
@@ -24,10 +25,14 @@ hr {
 }
 
 .hr-center {
-    width: 50%;
-    margin-left: 25%;
+    width: 60%;
+    margin-left: 20%;
 }
 
+.container {
+    width: 100%;
+    padding: 30px;
+}
 
 /****** Navbar ******/
 nav {
@@ -152,63 +157,60 @@ nav .burger-menu .line {
 
 /***** index *****/
 
-.banner {
+.header {
     width:100%;
-    height:75vh;
+    height:50vh;
 }
 
-.banner img {
+.header-image {
     width: 100%;
-    height:75vh;
+    height:50vh;
+    background: url('../images/darkhedges.jpg') no-repeat center center;
     object-fit: cover;
     overflow: hidden;
     position: relative;
 }
 
-.banner-text {
+.header-text {
     color: #ffffff;
-    font-size: 2em;
     font-style: italic;
     letter-spacing: 3px;
     word-spacing: 5px;
     position: absolute;
-    bottom:50%;
-    left: 25%;
+    top:25%;
+    left: 20%;
 }
 
-.container-one {
-    width: 100%;
+#about {
+    
     background-color: #FFA500;
-    padding: 50px;
-    display: flex;
+    
 }
 
 #about-text {
-    padding-right: 50px;
     text-align:justify;
 }
 
-.container-one img {
+#about img {
     height: 350px;
+    padding: 20px 0 0 20px;
     display: flex;
-    justify-content: space-between;
 }
 
-.container-two {
+#diaspora {
     width: 100%;
     background-color: #008000;
-    padding: 50px;
-    display: flex;
 }
 
-.container-two img {
+#diaspora img {
     display: flex;
     width: 100%;
+    padding: 10px 0 10px 0;
 }
 
 #diaspora-text {
-    padding: 0 50px 0 50px;
     text-align:justify;
+    padding-top: 10px;
 }
 
 .people-links {
@@ -290,6 +292,7 @@ nav .burger-menu .line {
 }
 
 
+
 /******** footer *********/
 
 footer {
@@ -333,24 +336,21 @@ footer {
 
 /********* events.html *********/
 
-.banner-events {
-    width:100%;
-    height:70vh;
-    margin-top: 70px;
-}
-
-.banner-events img {
+.header-image-events {
     width: 100%;
-    height: 70vh;
+    height:50vh;
+    background: url('../images/diasporaColor.svg') no-repeat center center;
     object-fit: cover;
     overflow: hidden;
     position: relative;
 }
 
-.banner-events-text {
+
+
+#map-text {
     color: #FFA500;
     text-shadow: 2px 2px #000000;
-    font-size: 2em;
+    /* font-size: 2em;
     font-style: italic;
     letter-spacing: 3px;
     word-spacing: 5px;
@@ -358,7 +358,7 @@ footer {
     position: absolute;
     text-align: center;
     bottom:50%;
-    left: 5%;
+    left: 5%; */
 }
 
 .container-two-events img {
@@ -436,13 +436,3 @@ footer {
     padding: 20px;
     display: flex;
 } */
-
-@media screen and (max-width:768px){
-
-    .container-one , .container-two {
-        display: inline-block;
-        justify-content: space-around;
-    }
-
-    
-}
