--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -34,7 +34,11 @@ hr {
     padding: 30px;
 }
 
-/****** Navbar ******/
+
+
+
+
+/************ Navbar *************/
 nav {
     position: fixed;
     z-index: 10;
@@ -155,64 +159,28 @@ nav .burger-menu .line {
 
 }
 
-/***** index *****/
+
+
+/************** index ****************/
 
 .header {
     width:100%;
     height:50vh;
 }
 
-.header-image {
+#header-image {
     width: 100%;
     height:50vh;
     background: url('../images/darkhedges.jpg') no-repeat center center;
     object-fit: cover;
     overflow: hidden;
     position: relative;
-}
 
-.header-text {
-    color: #ffffff;
-    font-style: italic;
-    letter-spacing: 3px;
-    word-spacing: 5px;
-    position: absolute;
-    top:25%;
-    left: 20%;
-}
 
-#about {
-    
-    background-color: #FFA500;
-    
-}
 
-#about-text {
-    text-align:justify;
-}
 
-#about img {
-    height: 350px;
-    padding: 20px 0 0 20px;
-    display: flex;
-}
 
-#diaspora {
-    width: 100%;
-    background-color: #008000;
-}
-
-#diaspora img {
-    display: flex;
-    width: 100%;
-    padding: 10px 0 10px 0;
-}
-
-#diaspora-text {
-    text-align:justify;
-    padding-top: 10px;
-}
-
+/********* article links ***********/
 .people-links {
     background-image: url('../images/darkhedges.jpg');
     display: flex;
@@ -293,7 +261,8 @@ nav .burger-menu .line {
 
 
 
-/******** footer *********/
+
+/************* footer ***************/
 
 footer {
     height: 100px;
@@ -334,42 +303,10 @@ footer {
 }
 
 
-/********* events.html *********/
-
-.header-image-events {
-    width: 100%;
-    height:50vh;
-    background: url('../images/diasporaColor.svg') no-repeat center center;
-    object-fit: cover;
-    overflow: hidden;
-    position: relative;
-}
 
 
 
-#map-text {
-    color: #FFA500;
-    text-shadow: 2px 2px #000000;
-    /* font-size: 2em;
-    font-style: italic;
-    letter-spacing: 3px;
-    word-spacing: 5px;
-    padding: 0 20px 0 20px;
-    position: absolute;
-    text-align: center;
-    bottom:50%;
-    left: 5%; */
-}
-
-.container-two-events img {
-    width: 100%;
-}
-#container-two-events-text {
-    display: block;
-    padding: 20px 50px 20px 50px;
-}
-
-
+/******** table *********/
 .container-table p {
     margin-left: 50px;
     margin-right: 50px;
@@ -412,27 +349,3 @@ footer {
 .table tbody tr:last-of-type {
     border-bottom: 3px solid rgba(0,128,128,.6);
 }
-
-.container-three {
-        display: block;
-        padding: 20px 50px 20px 50px;
-        margin-bottom: 20px;
-}
-
-.container-three h2 {
-    text-align: center;
-}
-
-
-/********** people.html **********/
-
-/* #mary-text {
-    padding: 50px;
-    text-align:justify;
-    color: #000000;
-}
-
-#mary-image {
-    padding: 20px;
-    display: flex;
-} */
