--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Uncial+Antiqua&display=swap');
 
+
 * {
     margin: 0;
     padding: 0;
@@ -11,11 +12,12 @@
 
 body {
     font-family: Montserrat, sans-serif;
-    display: block;
+    line-height: 1.6;
 }
 
 h1, h2, h3, h4 {
     font-family: 'Uncial Antiqua', Roboto, sans-serif;
+    line-height: 1;
 }
 
 hr {
@@ -29,13 +31,14 @@ hr {
     margin-left: 20%;
 }
 
-.container {
-    width: 100%;
-    padding: 30px;
+section {
+    padding: 3rem 0;
 }
 
-
-
+.container {
+    margin-inline: auto;
+    width: min(90%, 70.5rem);
+}
 
 
 /************ Navbar *************/
@@ -159,13 +162,13 @@ nav .burger-menu .line {
 
 }
 
-
-
-/************** index ****************/
+/**** header, hero *****/
 
 .header {
     width:100%;
     height:50vh;
+    text-align: center;
+    position: relative;
 }
 
 #header-image {
@@ -175,7 +178,22 @@ nav .burger-menu .line {
     object-fit: cover;
     overflow: hidden;
     position: relative;
+}
 
+#header-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #ffffff;
+    font-size: 150%;
+    letter-spacing: 4px;
+}
+
+
+
+
+/************* index.html ***********/
 
 
 
