--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,13 +31,21 @@ hr {
     margin-left: 20%;
 }
 
-section {
+header, section {
     padding: 3rem 0;
 }
 
 .container {
     margin-inline: auto;
     width: min(90%, 70.5rem);
+}
+
+.text-center {
+    text-align: center;
+}
+
+img {
+    max-width: 100%;
 }
 
 
