--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,8 +32,14 @@ hr {
 }
 
 header, section {
-    padding: 3rem 0;
+    padding: 4rem 0;
 }
+
+        @media (min-width:40em){
+            header, section {
+                padding:7rem 0;
+            }
+        }
 
 .container {
     margin-inline: auto;
@@ -45,15 +51,21 @@ header, section {
     flex-direction: column;
 }
 
-@media (min-width: 40em){
-    .split {
-        flex-direction: row;
-    }
 
-    .split > * {
-        flex-basis: 100%;
-    }
-}
+            @media (min-width: 40em){
+                .split {
+                    flex-direction: row;
+                }
+
+                .split > * {
+                    flex-basis: 100%;
+                }
+
+                .split > * + * {
+                    margin-left: 2em;
+                }
+            }
+
 
 .text-center {
     text-align: center;
