--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,12 +32,12 @@ hr {
 }
 
 header, section {
-    padding: 4rem 0;
+    padding: 2rem 0;
 }
 
         @media (min-width:40em){
             header, section {
-                padding:7rem 0;
+                padding:4rem 0;
             }
         }
 
@@ -69,6 +69,7 @@ header, section {
 
 .text-center {
     text-align: center;
+    padding: 20px 0;
 }
 
 img {
@@ -207,6 +208,13 @@ nav .burger-menu .line {
     position: relative;
 }
 
+@media (min-width:600px){
+    .header, .header-image {
+        margin-top: 0;
+        padding-top: 0;
+    }
+}
+
 #header-image {
     width: 100%;
     height:50vh;
@@ -225,6 +233,7 @@ nav .burger-menu .line {
     font-size: 150%;
     letter-spacing: 4px;
 }
+
 
 
 
@@ -374,7 +383,7 @@ footer {
     border-collapse: collapse;
     margin: 25px 0;
     font-size: 0.9em;
-    min-width: 400px;
+    min-width: 300px;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0,0,0,.3);
