--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -238,12 +238,6 @@ nav .burger-menu .line {
 
 
 
-
-/************* index.html ***********/
-
-
-
-
 /********* article links ***********/
 .people-links {
     background-image: url('../images/darkhedges.jpg');
@@ -412,4 +406,115 @@ footer {
 
 .table tbody tr:last-of-type {
     border-bottom: 3px solid rgba(0,128,128,.6);
+}
+
+
+
+/********** contact.html ***********/
+
+.contact {
+    position: relative;
+    min-height: 100vh;
+    padding: 50px 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: url('../images/darkhedges.jpg');
+    background-size: cover;
+    color: #ffffff;
+}
+
+.contact .content {
+    max-width: 800px;
+    text-align: center;
+}
+
+.contact .content h2 {
+    font-size: 36px;
+    font-weight: 500;
+    color: #ffffff;
+}
+
+.contact .content p {
+    font-weight: 300;
+    color: #ffffff;
+}
+
+.container-contact {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.container-contact .contact-info {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.container-contact .contact-info .box {
+    position: relative;
+    padding: 20px 0;
+    display: flex;
+}
+
+.container-contact .contact-info .box .icon {
+    min-width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-size: 22px;
+}
+
+.container-contact .contact-info .box .text {
+    display: flex;
+    margin-left: 20px;
+    font-size: 16px;
+    color:#ffffff;
+    flex-direction: column;
+}
+
+.container-contact .contact-info .box .text h3 {
+    font-weight: 500;
+    color: #FFA500;
+}
+
+.contact-form {
+    width: 40%;
+    padding: 40px;
+    background: #ffffff;
+}
+
+.contact-form h2 {
+    font-size: 30px;
+    color: #FFA500;
+    font-weight: 500;
+}
+
+.contact-form .input-box {
+    position: relative;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.contact-form .input-box input {
+    width: 100%;
+    padding: 5px 0;
+    font-size: 16px;
+    margin: 10px 0;
+    border: none;
+    border-bottom: 2px solid #008000;
+    outline: none;
+    resize: none;
+}
+
+.contact-form .input-box span {
+    position: absolute;
+    left: 0;
+    
 }
