--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -414,7 +414,8 @@ footer {
 
 .contact-page {
     background: url(../images/darkhedges.jpg) no-repeat center center;
-    min-height: 90vh;
+    /* min-height: 90vh; */
+    margin-top: 38px;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -437,13 +438,14 @@ footer {
 }
 
 .contact-info i {
-    margin-right: 20px;
+    /* margin-right: 20px; */
     font-size: 25px;
 }
 
 .contact-form {
     max-width: 700px;
-    margin-right: 50px;
+    padding: 20px;
+    /* margin-right: 50px; */
 }
 
 .contact-info, .contact-form {
@@ -513,6 +515,7 @@ footer {
 }
 
 @media screen and(min-width:768px){
+    
     .contact-section {
         flex-direction: column;
     }
