--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -354,8 +354,8 @@ footer {
     padding: 10px 16px;
     font-size: 25px;
     color: #ffffff;
-    border: 1px solid white;
-    border-radius: 50%;
+    /* border: 1px solid white;
+    border-radius: 50%; */
 }
 
 .socials a i {
