--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -420,7 +420,8 @@ footer {
 /********** contact.html ***********/
 
 .contact-page {
-    background: url(../images/darkhedges.jpg) no-repeat center center;
+    background: url(../images/darkhedges.jpg) no-repeat center;
+    height: 100%;
     /* min-height: 90vh; */
     margin-top: 38px;
     background-size: cover;
@@ -523,6 +524,10 @@ footer {
 
 @media screen and(min-width:768px){
     
+    .contact-page {
+        margin-top: 0;
+    }
+
     .contact-section {
         flex-direction: column;
     }
