--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,6 +17,18 @@ html {
 body {
     font-family: Montserrat, sans-serif;
     line-height: 1.6;
+    animation: transitionIn .5s;
+}
+
+@keyframes transitionIn {
+    from {
+        opacity: 0;
+        transform: rotateX(-10deg);
+    }
+    to {
+        opacity: 1;
+        transform: rotateX(0);
+    }
 }
 
 h1, h2, h3, h4 {
