--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,11 +23,11 @@ body {
 @keyframes transitionIn {
     from {
         opacity: 0;
-        transform: rotateX(-10deg);
+        transform: rotateY(-10px);
     }
     to {
         opacity: 1;
-        transform: rotateX(0);
+        transform: rotateY(0);
     }
 }
 
